2023-12-19T16:10:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7264469418 # 4362
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-19
* notice: query file size: 24291
* notice: accum prev / next / diff: re vi: 0 205 / 0 207 / +0 +2

2023-12-03T20:09:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7079095238 # 4267
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-03
* notice: query file size: 24331
* notice: accum prev / next / diff: re vi: 0 204 / 0 205 / +0 +1

2023-10-18T04:10:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6556096822 # 3987
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: query file size: 24329
* notice: accum prev / next / diff: re vi: 0 199 / 0 204 / +0 +5

2023-09-25T00:40:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6293418081 # 3848
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-09-25
* notice: query file size: 24487
* notice: accum prev / next / diff: re vi: 0 197 / 0 199 / +0 +2

2023-09-23T20:07:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6285751462 # 3841
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-09-23
* notice: query file size: 24311
* notice: accum prev / next / diff: re vi: 0 195 / 0 197 / +0 +2

2023-08-22T16:19:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5941422757 # 3678