@@ -1,3 +1,9 @@
+2023-12-19T20:07:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7267042996 # 4363
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-19
+* notice: query file size: 24321
+* notice: accum prev / next / diff: re vi: 0 207 / 0 209 / +0 +2
+
 2023-12-19T16:10:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7264469418 # 4362
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-19
